=========================================================================
CHANGE LOG
=========================================================================

2007-09-24  Warren L. DeLano <warren@delsci.com>

	* added auto_defer_builds setting
	
	* fixed performance bug w/ large discrete objects (10^3 states)
	
2007-09-20  Warren L. DeLano <warren@delsci.com>

	* fixed starup problem with "Documents" folder on Windows Vista
	
2007-09-06  Warren L. DeLano <warren@delsci.com>

	* added -k option to suppress use of .pymolrc, etc.
	
2007-09-04  Warren L. DeLano <warren@delsci.com>

	* eliminated some performance bottlenecks affecting virtualized
	  OpenGL contexts with texture_fonts enabled
	
2007-08-30  Warren L. DeLano <warren@delsci.com>

	* fixed VRML2 normals for rotated views (thanks Aaron Bryden!)
	
2007-08-29  Warren L. DeLano <warren@delsci.com>

	* fixed mistake with new double-hypen argument parsing
	
	* fixed problem with windows HOMEPATH ending in backslash
	
2007-08-28  Warren L. DeLano <warren@delsci.com>

	* added ramp_blend_nearby_colors setting (for LigandScout-like
    	  coloring via ramps)
	
	* movie_animate_by_frame setting controls whether animations
	  are interpolated based on wall-clock or movie time

	* added support for smooth camera interpolation within movies
	  (using scenes, views, animate options, etc.) for mpng, etc.

2007-08-26  Warren L. DeLano <warren@delsci.com>

	* added store_defaults & related options to reinitialize command
	
2007-08-25  Warren L. DeLano <warren@delsci.com>

	* implemented auto_rename_duplicate_objects setting
		
2007-08-24  Warren L. DeLano <warren@delsci.com>

	* added ellipsoid_quality and cgo_ellipsoid_quality settings
	
	* added CGO ellipsoids
	
2007-08-15  Warren L. DeLano <warren@delsci.com>

	* implemented some fixes to deal with new PDB nomenclature
	
	* now guessing approximate valences for PDB hetatm ligands in
	  order to improve hydrogen-bond display (setting: